# compile-ts

./: .editorconfig  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  PROJECT_PLAN.md  clippy.toml  package.json  skills-lock.json  todo  todo.md
.cursor/rules/: commit-convention.mdc  rust-development.mdc
.github/workflows/: ci.yml
compiler/nexa_allocator/: Cargo.toml
compiler/nexa_codegen/: Cargo.toml
compiler/tsc/: Cargo.toml  build.rs
compiler/tsc/src/: main.rs
compiler/tsc_driver_impl/: Cargo.toml
compiler/tsc_driver_impl/src/: codegen.rs  lexer.rs  lib.rs  module_resolver.rs  parser.rs  symbol_table.rs  type_checker.rs  types.rs
compiler/tsc_driver_impl/tests/: lexer_tests.rs  type_checker_tests.rs
docs/: ts-js-keywords-syntax.md
examples/: array_test.nexa  assign_test.nexa  break_test.nexa  call_assign_test.nexa  call_assign_test2.nexa  continue_test.nexa  fib_test.nexa  fib_with_else.nexa  fibonacci.nexa  fibonacci.ts  field_test.nexa  for_break_continue.nexa  for_loop.nexa  func_test.nexa  hello.nexa  hello_world.ts  if_else_test.nexa  interface_test.nexa  match_test.nexa  match_test2.nexa  method_test.nexa  no_interface_test.nexa  print_test.nexa  print_var.nexa  readln_test.nexa  simple2.ts  simple4.ts  simple5.ts  simple6.ts  simple8.ts  simple_test.nexa  std_demo.ts  string_concat.ts  struct_field_test.nexa  struct_test.nexa  struct_test.ts  switch_test.nexa  test.ts  test_assign.nexa  test_class.ts  (+15 more)
scripts/: build.sh  format.sh  test.sh
tests/: call_assign_test  compiler_test.rs  fib_test  hello  if_else_test  struct_test
(+39 files in other folders)
